--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Planets of the Universe</title>
-</head>
-<body>
+---
+layout: default
+---
 
 <h1>Planets of the Universe</h1>
 <p>This is Planets of the Universe.</p>
 
-</body>
-</html>
